--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,15 @@ packages = [
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.4"
+pytest-flask = "^1.2.0"
+pytest-cov = "^2.12.1"
+pre-commit = "^2.13.0"
+black = "^21.6b0"
+isort = "^5.9.1"
+flake8 = "^3.9.2"
+mypy = "^0.910"
+tox = "^3.23.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
