--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["jacksontoomey <jacksontoomey@gmail.com>"]
 packages = [
-    { include = "flask-configurer", from  = "src" }
+    { include = "flask_configurer", from  = "src" }
 ]
 
 [tool.poetry.dependencies]
@@ -20,6 +20,46 @@ isort = "^5.9.1"
 flake8 = "^3.9.2"
 mypy = "^0.910"
 tox = "^3.23.1"
+
+[tool.black]
+line-length = 131
+target-version = ['py39']
+
+[tool.isort]
+force_single_line = true
+force_sort_within_sections = true
+line_length = 131
+lines_after_imports = 2
+
+[tool.pytest.ini_options]
+testpaths = "tests"
+addopts = "--cov=notionlink --cov-report term-missing --cov-fail-under=100"
+
+[tool.coverage.run]
+omit = []
+
+[tool.mypy]
+python_version = "3.9"
+files = ["src", "tests"]
+ignore_missing_imports = true
+warn_redundant_casts = true
+
+[[tool.mypy.overrides]]
+module = 'flask_configurer.*'
+disallow_any_unimported = true
+disallow_any_generics = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_return_any = true
+warn_unreachable = true
+strict_equality = true
+implicit_reexport = false
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
