--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ lines_after_imports = 2
 
 [tool.pytest.ini_options]
 testpaths = "tests"
-addopts = "--cov=notionlink --cov-report term-missing --cov-fail-under=100"
+addopts = "--cov=flask_configurer --cov-report term-missing --cov-fail-under=100"
 
 [tool.coverage.run]
 omit = []
