--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+Inject = "^4.3.1"
+Flask = "^2.0.1"
+celery = "^5.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -19,6 +22,7 @@ black = "^21.6b0"
 isort = "^5.9.1"
 flake8 = "^3.9.2"
 mypy = "^0.910"
+celery-types = "^0.4.0"
 
 [tool.black]
 line-length = 131
